# mlops

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
mlruns/1/models/m-4be65f26b0d446b3bcdcc98f655d02aa/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-eecdb3251e824e90afaf4578e8936244/artifacts/: MLmodel  python_env.yaml
src/: app.py  data_pipeline.py  train.py
tests/: test_api.py
