[project]
name = "sms-spam-detector" # Or your project name
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "mlflow>=2.14.0",
    "kagglehub>=0.2.0",
    "joblib>=1.4.0",
    "pytest>=8.2.0",
    "pytest-cov>=6.0.0",  # ⬅️ ADDED: Required for --cov flag in CI
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]